# git-ignore.rs

./: Cargo.toml
src/: main.rs
